# codex-react-native-stock

./: .gitignore  .windsurfrules  AGENTS.md  Agent_Tools_Spec.csv  Agent_Tools_Spec.xlsx  codex-react-native-stock.code-workspace  readme.md  stock_gsrl_gsdt_em.csv  stock_news_em.csv  stock_share_change_cninfo.csv  stock_yjbb_em.csv
agentplan/be/: README.md  pyproject.toml
agentplan/be/app/: __init__.py  main.py
agentplan/be/app/agents/: __init__.py  echo.py  polisher.py  registry.py  writer.py
agentplan/be/app/api/: __init__.py  routes.py
agentplan/be/app/contracts/: __init__.py  agent.py  api.py  graph.py  plan.py
agentplan/be/app/graph/: __init__.py  exporter.py  plan_compile.py  state.py
agentplan/be/app/memory/: __init__.py  in_memory.py  redis_store.py
agentplan/be/app/observability/: __init__.py  events.py
agentplan/be/app/planner/: __init__.py  catalog.py  llm.py
agentplan/be/app/runtime/: __init__.py  config.py  context.py  llm.py  service.py
agentplan/be/tests/: test_service.py
stockaibe/be/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  LOGGING.md  MIGRATION_GUIDE.md  QUOTA_NAME_MAPPING.md  README.md  README_LOGGING.md  TASK_DECORATOR_GUIDE.md  TROUBLESHOOTING_TASKS.md  add_akshare_quota.py  check_db_tasks.py  debug_import.py  env.example  init_quotas.py  logging_config.yaml  migration_add_func_tracking.sql  pyproject.toml  start_server.bat  test_api_direct.py  test_decorator_simple.py  test_http.py  test_logging.py  test_quota_tokens.py  test_register.py  test_simple.py  test_startup.py  test_task_logging.py  test_task_registration.py
stockaibe/be/dashboard/: README.md  app.py
stockaibe/be/doc/: DATABASE_FIX_GUIDE.md  DATABASE_MIGRATION.md  FUNC_TRACKING_GUIDE.md  LIMITCALLTASK_GUIDE.md  LIMITTASK_MANUAL.md  README.md  SCHEDULERTASK_MANUAL.md  TASK_DECORATORS_OVERVIEW.md  TROUBLESHOOTING.md  日志系统集成完成.md
stockaibe/be/init/: add_akshare_quota.sql  add_task_type_column.py  fix_database.py  fix_quota_table.sql  init_quotas.sql
stockaibe/be/migrations/: README.md  add_task_type_column.sql  migrate.bat
stockaibe/be/script/: create_admin.py  reactivate_tasks.py  run.py  start_dev.ps1  start_prod.ps1  start_server.ps1
stockaibe/be/src/stockaibe_be/: __init__.py  auth.py  limiter.py  main.py  models.py  scheduler.py
stockaibe/be/src/stockaibe_be/api/: __init__.py  auth.py  events.py  limiter.py  metrics.py  quotas.py  shanghai_a.py  tasks.py  traces.py
stockaibe/be/src/stockaibe_be/core/: __init__.py  config.py  database.py  logging_config.py  redis_client.py  security.py
stockaibe/be/src/stockaibe_be/models/: __init__.py  models.py
stockaibe/be/src/stockaibe_be/schemas/: __init__.py  schemas.py
stockaibe/be/src/stockaibe_be/services/: __init__.py  limiter.py  scheduler.py  shanghai_a_service.py  task_decorators.py  task_registry.py
stockaibe/be/src/stockaibe_be/tasks/: akshare_task.py  aksharetest.py  batch_processing_example.py
stockaibe/be/tasks/: __init__.py  batch_processing_example.py  example_tasks.py
stockaibe/be/test/: aksharetest.py  stock_fund_flow_individual.csv  stock_market_fund_flow.csv  test.py
stockaibe/fe/: .eslintrc.cjs  QUOTA_FIELDS_UPDATE.md  README.md  TIMEZONE_FIX.md  TRACES_PAGE_REDESIGN.md  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json
stockaibe/fe/src/: App.tsx
stockaibe/fe/src/api/: client.ts  mock.ts
stockaibe/fe/src/components/: ApiForm.tsx  ApiTable.tsx  PageHeader.tsx  QuarterPicker.tsx
stockaibe/fe/src/components/ShanghaiA/: BalanceSheetTab.tsx  BidAskTab.tsx  (+10 more)
stockaibe/fe/src/contexts/: AuthContext.tsx
stockaibe/fe/src/hooks/: useApiRegistry.ts
stockaibe/fe/src/layouts/: MainLayout.tsx
stockaibe/fe/src/pages/: ApiManagement.tsx  Dashboard.tsx  Login.tsx  Quotas.tsx  Settings.tsx  ShanghaiA.tsx  ShanghaiA_OLD.tsx  Tasks.tsx  Traces.tsx
stockaibe/fe/src/styles/: global.css
stockaibe/fe/src/types/: api.ts  index.ts
stockaibe/fe/src/utils/: dayjs.ts  test-timezone.ts
(+68 files in other folders)
