[tool.poetry]
name = "agentplan-be"
version = "0.1.0"
description = "Agent orchestration backend built with FastAPI and LangGraph."
authors = ["AI Assistant <assistant@example.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.111.0"
uvicorn = { version = "^0.29.0", extras = ["standard"] }
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
langchain = "^1.0.1"
langgraph = "^1.0.1"
redis = "^5.0.0"
httpx = "^0.27.0"
python-multipart = "^0.0.9"
pyyaml = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
hiredis = { version = "^2.3.0", optional = true }

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

