[tool.poetry]
name = "stockaibe"
version = "0.1.0"
description = "Stock AI backend service"
authors = ["AI Assistant <assistant@example.com>"]
packages = [{ include = "stockaibe_app", from = "src" }]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
SQLAlchemy = "^2.0.29"
asyncpg = "^0.29.0"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
akshare = "^1.17.64"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
langchain = "^0.3.27"
langchain-community = "^0.3.31"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"

[tool.poetry.scripts]
stockaibe = "stockaibe_app.main:run"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
