[tool.poetry]
name = "stockaibe-fe"
version = "0.1.0"
description = "Streamlit dashboard for limiter admin"
authors = ["AI Assistant <assistant@example.com>"]
packages = []

[tool.poetry.dependencies]
python = "^3.13"
streamlit = "^1.35.0"
httpx = "^0.27.0"
pandas = "^2.2.0"
plotly = "^5.20.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
